# simpledebyescattering

./: README.md  pyproject.toml
simpledebyescattering/: __init__.py  debye.py  xrayfunctions.py  xrddata.py
